--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,18 +1,22 @@
 .header {
+  max-width: 880px;
+  margin: 45px auto 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  border-bottom: solid rgba(84, 84, 84, 0.7) 1px;
+}
+
+@media screen and (min-width: 321px) and (max-width: 1280px) {
+  .header {
     max-width: 880px;
-    margin: 45px auto 0;
-    border-bottom: solid rgba(84, 84, 84, 0.7) 1px;
+  }
 }
 
-@media screen and (min-width:321px) and (max-width:1280px) {
-    .header {
-        max-width: 880px;
-    }
-}
-
-@media screen and (max-width:320px) {
-    .header {
-        max-width: 320px;
-        margin-top: 28px;
-    }
+@media screen and (max-width: 320px) {
+  .header {
+    max-width: 320px;
+    margin-top: 28px;
+  }
 }
