--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__auth/header__auth.css);
+@import url(./blocks/header/__auth-style/header__auth-style.css);
+
+@import url(blocks/auth/auth.css);
+@import url(blocks/auth/__title/auth__title.css);
+@import url(blocks/auth/__form/auth__form.css);
+@import url(blocks/auth/__input/auth__input.css);
+@import url(blocks/auth/__button-submit/auth__button-submit.css);
+@import url(blocks/auth/__question/auth__question.css);
 
 @import url(./blocks/content/content.css);
 
@@ -43,8 +52,11 @@
 @import url(./blocks/popup/__save-btn/_disable/popup__save-btn_disable.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/popup/__img-title/popup__img-title.css);
+@import url(./blocks/popup/__title/_auth/popup__title_auth.css);
 @import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__container/_auth/popup__container_auth.css);
 @import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__auth_img/popup__auth-img.css);
 
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__text/footer__text.css);
